--- a/style.css
+++ b/style.css
@@ -2,4 +2,15 @@
  body {
     font-family: Arial, sans-serif;
 }
+table{
+    width: 100%;
+    /* height: 100vh; */
+    /* overflow: scroll; */
+ }
+  tr , td, th{
+    /* width: 100%; */
+    /* text-align: center; */
+    border: 1px solid rgb(84, 196, 240);
+    border-collapse: collapse;
+ }
 
